<resources>
    <string name="app_name">BloodBank</string>
    <string name="enter_your_email_address">Enter your Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_contact_number">Enter your Contact Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="go_to_timeline">Go to Timeline</string>
    <string name="log_out">Log Out</string>
    <string name="request_blood">Request Blood</string>
    <string name="what_blood_group_do_you_need">What Blood group do you need?</string>
    <string name="where_do_you_need_the_blood">Where do you need the blood?</string>
    <string name="when_do_you_need_it">When do you need it?</string>
    <string name="how_many_bags_do_you_need">how many bags do you need?</string>
    <string name="submit">Submit</string>
    <string name="go_to_profile">Go to Profile</string>
    <string name="enter_your_sex">Enter your Sex</string>
</resources>
