<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Activities.RequstBlood">

    <EditText
        android:id="@+id/requesting_blood_group"
        android:hint="@string/what_blood_group_do_you_need"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/requesting_location"
        android:hint="@string/where_do_you_need_the_blood"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/requesting_time"
        android:hint="@string/when_do_you_need_it"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/amount_of_blood"
        android:hint="@string/how_many_bags_do_you_need"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/submit_request"
        android:text="@string/submit"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>