<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Activities.LogInActivity">

    <TextView
        android:text="@string/app_name"
        android:textSize="42sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/login_mail"
        android:hint="@string/enter_your_email_address"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/login_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/login_button"
        android:text="@string/log_in"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:text="New here ?? CLick the button below to Sign up now"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/go_to_signup"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>