<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Activities.SignUpActivity">
    <TextView
        android:text="@string/app_name"
        android:textSize="42sp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/signup_mail"
        android:hint="@string/enter_your_email_address"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/phone_number"
        android:hint="@string/enter_your_contact_number"
        android:inputType="phone"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/first_name"
        android:hint="First Name"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/last_name"
        android:hint="Last Name"
        android:layout_width="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/signup_password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/confirm_password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/signup"
        android:text="Sign Up"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>